refactor: rename template to proxmox

--- a/src/proxmox-config.html
+++ b/src/proxmox-config.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED
         .nodes
-        .registerType('template-config', {
+        .registerType('proxmox-config', {
             category: 'config',
             defaults: {
                 name: {
@@ -18,7 +18,7 @@
         });
 </script>
 
-<script type="text/x-red" data-template-name="template-config">
+<script type="text/x-red" data-template-name="proxmox-config">
 
     <div class="form-row">
         <label for="node-config-input-name" style="width:160px !important">
@@ -33,6 +33,6 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="template-config">
+<script type="text/x-red" data-help-name="proxmox-config">
    
 </script>
