--- a/src/proxmox-node.html
+++ b/src/proxmox-node.html
@@ -19,10 +19,10 @@
                 } else if (this.confignode.name) {
                     return this.confignode.name;
                 }
-                return "proxmox";
+                return "proxmox node";
             },
             icon: "proxmox.png",
-            paletteLabel: "proxmox",
+            paletteLabel: "node",
             oneditprepare: function () {
                 var node = this;
 
