--- a/src/proxmox-storage.html
+++ b/src/proxmox-storage.html
@@ -28,7 +28,7 @@
                 return "proxmox storage";
             },
             icon: "proxmox.png",
-            paletteLabel: "proxmox storage",
+            paletteLabel: "storage",
             oneditprepare: function () {
                 var node = this;
 
