--- a/src/proxmox-backup.html
+++ b/src/proxmox-backup.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED
         .nodes
-        .registerType('proxmox-node', {
+        .registerType('proxmox-backup', {
             category: 'proxmox',
             defaults: {
                 confignode: {
@@ -19,10 +19,10 @@
                 } else if (this.confignode.name) {
                     return this.confignode.name;
                 }
-                return "proxmox";
+                return "proxmox backup";
             },
             icon: "proxmox.png",
-            paletteLabel: "proxmox",
+            paletteLabel: "backup",
             oneditprepare: function () {
                 var node = this;
 
@@ -34,13 +34,13 @@
         });
 </script>
 
-<script type="text/x-red" data-template-name="proxmox-node">
+<script type="text/x-red" data-template-name="proxmox-backup">
     <div class="form-row">
         <label for="node-input-confignode"><i class="fa fa-globe"></i> <span>Config</span></label>
         <input type="text" id="node-input-confignode">
     </div>  
 </script>
 
-<script type="text/x-red" data-help-name="proxmox-node">
+<script type="text/x-red" data-help-name="proxmox-backup">
   
 </script>
